Form Alignment Fix

--- a/css/styles1.css
+++ b/css/styles1.css
@@ -8,8 +8,8 @@
 input[type=text] {
     border: 0px solid rgb(51, 51, 51);
     border-radius: 10px;
-    width: 420px;
-    height: 52px;
+    /* min-width: 334px; */
+    height: 33px;
     line-height: 32px;
     font-weight: 400;
     font-size: 20px;
